--- a/PlantillaModernUI/Forms/Main.resx
+++ b/PlantillaModernUI/Forms/Main.resx
@@ -357,4 +357,47 @@
         F+MeLyW/3dKIB35TTxH8pjBaENed4Hymnst7iwk57s/+H1CkaWLwqE8bAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAioAAACwCAYAAAAhUkW/AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAACJNJREFUeF7t3WuoZWUdBnBHx8lGKzXKzERkKjIli1SihkoU0vASqUmYidVE5K3B
+        GkJTC1O6qZQYhEX6QQ3MGDNjMGKMblJZmqUZWtgNyS6mSZja6Xn3+y87zeWcM+Neezv+fvB8WGu97z5n
+        9vmwnll7rXdvBQA8uczMzCxN9q5NAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAA2w8zMzD7JkbUJADA9UlIOS1bWJgDA9EhJOTW5pDYBAKZHSsqFyQ21
+        CQAwPVJSVid31yYAwPRISbkleTTZtnYBAEyHFJQHkmZZ7QIAmLyUk517Rxk5pHYDAExeysl+vaOMnFy7
+        AQAmL+Xk6N5RRi6q3QAAk5dysqp3lJHrajcAwOSlnHy2d5SR22s3AMDkpZys6R1l5OFk6zoEADBZKSZ3
+        jirK4/aoQwAAk5NSsihpV1H+14F1GABgclJKduvdZJYVdRgAYHJSSpb3bjLLJ+owAMDkpJQc37vJLNfU
+        YQCAyUkpObt3k1lurcMAAJOTUvLF3k1mebAOAwBMTkrJjb2brON5NQQAYDJSSO7pvWQdy2sIAMDwUka2
+        TR4b1ZJ1nVDDAACGlzKyrHeS9Tq3hgEADC9l5ODeSdbryhoGADC8lJEVvZOs1w9rGADA8FJGzu+dZL3+
+        WsMAAIaXMnJV7yQbtFMNBQAYVorITb2PbND+NRQAYFgpIn/sfWSD3lpDAQCGkxKytHeRjTqrhgMADCcl
+        ZJ/eRTbq8hoOADCclJDDehfZqG/XcACA4aSEnNq7yEbdW8MBAIaTEnJh7yJz2qGmAAAMIwVkde8hc9q3
+        pgAADCMF5JbeQ+Z0VE0BABhGCsgDvYfMaVVNAQAYv5SPnXsHmZdLaxoAwPilfOzXO8i8rK1pAADjl/Jx
+        dO8g83JPTQMAGL+Uj1W9g8zLv5Kn1VQAgPFK8fjsqILM3141FQBgvFI81vT+MW+H11QAgPFK8biz9495
+        W1lTAQDGJ6VjUfLwqH7M38U1HQBgfFI6duvdY0HW1HQAgPFJ6Vjeu8eC3FXTAQDGJ6Xj+N49FuSRZHG9
+        BADAeKRwnD2qHgu3rF4CAOCJkYKxS/Lq5G3JOcltyaZ4Z7JjvSwAwNxSHpYkL0oOTU5KLkhWJz9N/p48
+        0e5Pfpx8JWk/6+TksOSlydL6tQCAp4oUgPZtx+2LBI9Nzkg+n6xN7kkeS6bJvclNyZXJ+cmK5ODkhcm2
+        9U8CAJ4scgLfJtkzOShpJ/aPJVcnNyftCsaWopWq3yQ3Jpcl7aOotyevTV6QbF1vCQAwpJyEn5Hsm7w5
+        eX/Svm/nhuSupD1Vw8zMP5NfJu19+VzywaRdRTogeW69lQDAQuVE2lZ8bVcF2tWBE5NzkyuS9jHIfQmb
+        r91z87Pkq8lnkpXJm5KXJ8+sPwUAPDXlZLhdsndyeHJa8unka8ntyUKXpeeJ95ekfVz25eSTyXuTNyYv
+        SbarPyMAbFlykntZsiq5Prk7eTThyaPdF/PN5MzkgPqzAsCWKSe79khw+1/6EcnpSbufoj2F89uEyfhz
+        8v3k8qQVkqOTdk/Q0+vPBgDkxLh9nSCPST6UtBPn95J2ImXz/CO5NbkmOS85IWmL2T273n4AYFPlhLpT
+        8qqkfd9Ou9n2S8lPkgcTuvYIc/t47etJuweoLWLXHtveI1lUbyUAMKSchJ+fvC5p66i0G0GvTX6etEd2
+        t0RtYbhvJW3xug8kRyZ7JUvqLQEApl1O3P9ZDO4NySlJeyx3TfKrZNpWpf1/DyTtKZy2Su2Hk+OSVyYe
+        JQaALV1O+O2m3vYdO+1qRFtE7tKkrfr6+2Qo7YrPHUm7AvSp5F1JuzK0a/2aAACzpSjskLwieUtyVtJu
+        6m2Lz23qR0l/Stojvpck70va+iTLksX1IwEANk+KxTeSTXFKvQQAwHikcLQ1XzbFIfUSAADjkcLRnrDZ
+        FHvWSwAAjEcKx1G9dyxIu69lm3oJAIDxSOFoN9gu1B01HQBgfFI6ntW7x4JcW9MBAMYrxaM9arwQF9RU
+        AIDxSvH4Qe8f8/bumgoAMF4pHlf1/jFvB9ZUAIDxSvH4aO8f87Z7TQUAGK8Uj3f0/jEvDyWLaioAwHil
+        eLx+VEHm59aaBgAwfikfu/cOMi/X1DQAgPFL+dg6eXhUQ+Z2Xk0DABhGCsgveg+Z04k1BQBgGCkg1/ce
+        MqflNQUAYBgpIBf3HjKn59QUAIBhpICs7D1ko/5WwwEAhpMSckTvIhv1oxoOADCclJB9ehfZqCtqOADA
+        cFJClvYuslEfqeEAAMNKEflD7yMbdFwNBQAYVorId3of2aD9aygAwLBSRC7vfWSDdqyhAADDShE5p/eR
+        9bqvhgEADC9l5PjeSdbruzUMAGB4KSOv6Z1kvS6rYQAAw0sZ2aV3kvU6s4YBAExGCslDvZes45gaAgAw
+        GSkkt/Veso59awgAwGSkkKzuvWQd29cQAIDJSCG5sPeSWX5XhwEAJiel5KTeTWZZW4cBACYnpeTQ3k1m
+        ubQOAwBMTkrJi3s3meX0OgwAMDkpJUuSx0b15HFH1mEAgMlKMbmn95P/2rsOAQBMVorJ2t5PRtrVlSV1
+        CABgslJMvjCqKN2vazcAwOSlnJzRO8rIDbUbAGDyUk6O7R1l5OLaDQAweSkn+/eOMnJa7QYAmLyUk517
+        Rxk5tHYDAEyHFJT7e0+ZWVa7AACmQwrKzckjyeLaBQAwHVJQrk7urE0AgOmRkvLx5LraBACYHikpK5KL
+        ahMAYHqkpByUvKc2AQCmR0rKnq2s1CYAwPRISVmc7FqbAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwLxstdW/AaXLaWrM2U9LAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
 </root>
